--- a/css/sign-up.css
+++ b/css/sign-up.css
@@ -4,6 +4,7 @@
 @import url(https://fonts.googleapis.com/css?family=Poppins:regular,500,600,700&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Croissant+One:regular&display=swap);
 @import url(https://fonts.googleapis.com/css?family=Varela+Round:regular&display=swap);
+@import url(style.css);
 * {
   padding: 0;
   margin: 0;
@@ -137,18 +138,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 25px 0px 0;
   }
 }
-.form__input {
-  background-color: #FAFAFA;
-  opacity: 0.8;
-}
-@media (min-width: 768px) {
-  .form__input {
-    margin: 0 20% 0 0;
-  }
-}
-.form__input.error {
-  box-shadow: 0 0 15px red;
-}
 .form__ico {
   background-color: #FAFAFA;
   opacity: 0.8;
@@ -164,12 +153,64 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.js-input {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input1 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input1 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input1.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input2 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input2 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input2.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input3 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input3 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input3.error {
+  box-shadow: 0 0 15px red;
+}
+
 .header {
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 50;
+  z-index: 3;
   margin: 0 0 20px 0;
   background-color: white;
 }
@@ -303,6 +344,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   background: linear-gradient(95.32deg, #313131 0%, #000000 101.64%);
   border-radius: 3px;
+}
+.sign-up:hover {
+  transition: all 1s ease 0s;
 }
 
 .login {
@@ -442,18 +486,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 25px 0px 0;
   }
 }
-.form__input {
-  background-color: #FAFAFA;
-  opacity: 0.8;
-}
-@media (min-width: 768px) {
-  .form__input {
-    margin: 0 20% 0 0;
-  }
-}
-.form__input.error {
-  box-shadow: 0 0 15px red;
-}
 .form__ico {
   background-color: #FAFAFA;
   opacity: 0.8;
@@ -467,6 +499,58 @@ h1, h2, h3, h4, h5, h6 {
   .form__ico img {
     margin: 2.5% 0 0 0;
   }
+}
+
+.js-input {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input1 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input1 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input1.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input2 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input2 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input2.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input3 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input3 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input3.error {
+  box-shadow: 0 0 15px red;
 }
 
 .footer {
@@ -583,21 +667,49 @@ body.lock {
   overflow: hidden;
 }
 
-.page {
-  background-image: url(../img/home/bg1.png);
-  max-height: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+.popup {
   width: 100%;
-  padding: 340px 0 270px 0;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background-color: transparent;
+  z-index: 5;
+  transform: translateY(-44.5%) scale(0);
+  transition: all 0.5s ease 0s;
+}
+.popup._active {
+  transform: translateY(0%) scale(100%);
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.popup__container {
+  max-width: 700px;
+  margin: 50px auto;
+}
+.popup__body {
+  position: relative;
+}
+
+.js-form1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .form2__item {
   margin: 0 0 30px 0;
   background: #FAFAFA;
   opacity: 0.8;
-  padding: 20px 10px 20px 10px;
+  padding: 20px 10px 20px 15px;
+}
+@media (max-width: 767.98px) {
+  .form2__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px 10px 20px 15px;
+    margin: 0 15px 0 15px;
+  }
 }
 .form2__button {
   display: flex;
@@ -608,43 +720,37 @@ body.lock {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
-  font-size: 9px;
-  line-height: 9px;
-  letter-spacing: 1px;
+  font-size: 15px;
+  line-height: 15px;
   color: #FFFFFF;
   background: linear-gradient(95.32deg, #313131 0%, #000000 101.64%);
-  padding: 10px 30px;
+  padding: 8px 30px;
   margin: 0 25px 30px 0;
 }
+@media (max-width: 767.98px) {
+  .form__label {
+    margin: 0 0 30px 0;
+  }
+}
 .form__label.password {
-  padding: 10px 20px;
+  padding: 8px 15px;
 }
-
-.name {
-  width: 70%;
+.form__input2 {
+  width: 50%;
 }
 @media (max-width: 767.98px) {
-  .name {
-    width: 50%;
+  .form__input2 {
+    width: 100%;
   }
 }
 
-.email {
-  width: 70%;
-}
-@media (max-width: 767.98px) {
-  .email {
-    width: 50%;
-  }
-}
-
-.password {
-  width: 70%;
-}
-@media (max-width: 767.98px) {
-  .password {
-    width: 50%;
-  }
+.close__popup {
+  color: #FAFAFA;
+  position: absolute;
+  top: -30px;
+  right: -30px;
+  font-size: 21px;
+  cursor: pointer;
 }
 
 .button__send {
