--- a/anime-blog/css/home-page.css
+++ b/anime-blog/css/home-page.css
@@ -137,18 +137,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 25px 0px 0;
   }
 }
-.form__input {
-  background-color: #FAFAFA;
-  opacity: 0.8;
-}
-@media (min-width: 768px) {
-  .form__input {
-    margin: 0 20% 0 0;
-  }
-}
-.form__input.error {
-  box-shadow: 0 0 15px red;
-}
 .form__ico {
   background-color: #FAFAFA;
   opacity: 0.8;
@@ -164,12 +152,64 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.js-input {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input1 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input1 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input1.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input2 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input2 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input2.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input3 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input3 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input3.error {
+  box-shadow: 0 0 15px red;
+}
+
 .header {
   position: fixed;
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 50;
+  z-index: 3;
   margin: 0 0 20px 0;
   background-color: white;
 }
@@ -303,6 +343,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 500;
   background: linear-gradient(95.32deg, #313131 0%, #000000 101.64%);
   border-radius: 3px;
+}
+.sign-up:hover {
+  transition: all 1s ease 0s;
 }
 
 .login {
@@ -442,18 +485,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 25px 0px 0;
   }
 }
-.form__input {
-  background-color: #FAFAFA;
-  opacity: 0.8;
-}
-@media (min-width: 768px) {
-  .form__input {
-    margin: 0 20% 0 0;
-  }
-}
-.form__input.error {
-  box-shadow: 0 0 15px red;
-}
 .form__ico {
   background-color: #FAFAFA;
   opacity: 0.8;
@@ -467,6 +498,58 @@ h1, h2, h3, h4, h5, h6 {
   .form__ico img {
     margin: 2.5% 0 0 0;
   }
+}
+
+.js-input {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input1 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input1 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input1.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input2 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input2 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input2.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input3 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input3 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input3.error {
+  box-shadow: 0 0 15px red;
 }
 
 .footer {
