--- a/anime-blog/css/style.css
+++ b/anime-blog/css/style.css
@@ -134,18 +134,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 25px 0px 0;
   }
 }
-.form__input {
-  background-color: #FAFAFA;
-  opacity: 0.8;
-}
-@media (min-width: 768px) {
-  .form__input {
-    margin: 0 20% 0 0;
-  }
-}
-.form__input.error {
-  box-shadow: 0 0 15px red;
-}
 .form__ico {
   background-color: #FAFAFA;
   opacity: 0.8;
@@ -159,4 +147,56 @@ h1, h2, h3, h4, h5, h6 {
   .form__ico img {
     margin: 2.5% 0 0 0;
   }
+}
+
+.js-input {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input1 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input1 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input1.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input2 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input2 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input2.error {
+  box-shadow: 0 0 15px red;
+}
+
+.js-input3 {
+  background-color: #FAFAFA;
+  opacity: 0.8;
+}
+@media (min-width: 768px) {
+  .js-input3 {
+    margin: 0 20% 0 0;
+  }
+}
+.js-input3.error {
+  box-shadow: 0 0 15px red;
 }
