--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -72,7 +72,18 @@ body.lock {
             margin: 0 0 30px 0;
         }
         &.password {
+            font-family: 'Poppins';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 15px;
+            line-height: 15px;
+            color: #FFFFFF;
+            background: linear-gradient(95.32deg, #313131 0%, #000000 101.64%);
             padding: 8px 15px;
+            margin: 0 25px 30px 0;
+            @media (max-width: $md3) {
+                margin: 0 0 30px 0;
+            }
         }
         
     }
