--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -748,6 +748,11 @@ body.lock {
     margin: 0 0 30px 0;
   }
 }
+@media (min-width: 767.98px) {
+  .form__label.password {
+    padding: 8px 15px;
+  }
+}
 .form__input2 {
   width: 50%;
 }
