--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -84,6 +84,9 @@ body.lock {
             @media (max-width: $md3) {
                 margin: 0 0 30px 0;
             }
+            @media (min-width: $md3) {
+                padding: 8px 15px;
+            }
         }
         
     }
