--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -71,7 +71,7 @@ body.lock {
         @media (max-width: $md3) {
             margin: 0 0 30px 0;
         }
-        &.password {
+        &__password {
             @media (min-width: $md3) {
                 padding: 8px 15px;
             }
