--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -762,6 +762,23 @@ body.lock {
   }
 }
 
+@media (max-width: 767.98px) {
+  .results {
+    display: none;
+  }
+}
+
+@media (min-width: 767.98px) {
+  .button__send {
+    display: none;
+  }
+}
+@media (max-width: 767.98px) {
+  .button__send {
+    display: block;
+  }
+}
+
 .close__popup {
   color: #FAFAFA;
   position: absolute;
