Добавил кнопку закрытия поп апа3

--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -103,6 +103,9 @@ body.lock {
     @media(max-width: $md3) {
         display: none;
     }
+    @media(min-width: $md3) {
+        display: block;
+    }
 }
 
 .button__send {
