--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -767,6 +767,11 @@ body.lock {
     display: none;
   }
 }
+@media (min-width: 767.98px) {
+  .results {
+    display: block;
+  }
+}
 
 @media (min-width: 767.98px) {
   .button__send {
