--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -762,17 +762,6 @@ body.lock {
   }
 }
 
-@media (max-width: 767.98px) {
-  .results {
-    display: none;
-  }
-}
-@media (min-width: 767.98px) {
-  .results {
-    display: block;
-  }
-}
-
 @media (min-width: 767.98px) {
   .button__send {
     display: none;
@@ -791,6 +780,16 @@ body.lock {
   right: -30px;
   font-size: 21px;
   cursor: pointer;
+}
+@media (max-width: 767.98px) {
+  .close__popup {
+    display: none;
+  }
+}
+@media (min-width: 767.98px) {
+  .close__popup {
+    display: block;
+  }
 }
 
 .button__send {
