Добавил кнопку закрытия поп апа7

--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -713,7 +713,7 @@ body.lock {
 }
 .form2__button {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .form__label {
