--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -53,7 +53,7 @@ body.lock {
 
     &__button {
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
     }
 }
 .form {
