--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -53,7 +53,15 @@ body.lock {
 
     &__button {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        &_close {
+            display: none;
+            @media(max-width: $md3) {
+                display: block;
+                display: flex;
+                justify-content: space-around;
+            }
+        }
     }
 }
 .form {
