--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -54,13 +54,19 @@ body.lock {
     &__button {
         display: flex;
         justify-content: center;
+        
+    }
+    &__button1 {
+        display: none;
         @media(max-width: $md3) {
-            display: none;
+            display: flex;
+            justify-content: space-around;
+            display: block;
         }
     }
 }
 
-.form2__button_close{
+.form2__button1_close{
     display: none;
     @media(max-width: $md3) {
         display: block;
