Добавил кнопку закрытия поп апа23

--- a/anime-blog/scss/home-page.scss
+++ b/anime-blog/scss/home-page.scss
@@ -54,6 +54,10 @@ body.lock {
         }
     }
 
+    &__info {
+        display: flex;
+        justify-content: center;
+    }
 
     &__category {
         margin: 0 0 20px 0;
