--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -755,9 +755,9 @@ button#close__pop_up_1.close__pop_up {
   line-height: 28px;
   text-align: center;
   letter-spacing: 0.5px;
-  color: #FFFFFF;
-  background: linear-gradient(95.32deg, #313131 0%, #000000 101.64%);
-  border: 2px solid #FFFFFF;
+  color: #000000;
+  background-color: #FFFFFF;
+  border: 2px solid #000000;
   border-radius: 3px;
   padding: 5px 15px;
   margin: 30px 0 0 0;
