--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -736,7 +736,7 @@ button.button__send1 {
   font-style: normal;
   font-weight: 500;
   font-size: 14px;
-  line-height: 28px;
+  line-height: 200%;
   text-align: center;
   letter-spacing: 0.5px;
   color: #FFFFFF;
@@ -751,8 +751,8 @@ button#close__pop_up_1.close__pop_up {
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 28px;
+  font-size: 16px;
+  line-height: 175%;
   text-align: center;
   letter-spacing: 0.5px;
   color: #000000;
