--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -77,7 +77,7 @@ button.button__send1 {
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 28px;
+    line-height: 28 / 14 * 100%;
     text-align: center;
     letter-spacing: 0.5px;
     color: #FFFFFF;
@@ -92,8 +92,8 @@ button#close__pop_up_1.close__pop_up {
     font-family: 'Poppins';
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 28 / 16 * 100%;
     text-align: center;
     letter-spacing: 0.5px;
     color: #000000;
