--- a/anime-blog/css/home-page.css
+++ b/anime-blog/css/home-page.css
@@ -677,6 +677,8 @@ body.lock {
 }
 .welcome__content {
   margin: 0 80px 0 80px;
+  display: flex;
+  justify-content: center;
 }
 @media (max-width: 767.98px) {
   .welcome__content {
