--- a/anime-blog/scss/home-page.scss
+++ b/anime-blog/scss/home-page.scss
@@ -15,6 +15,8 @@ body.lock {
     margin: 0 0 70px 0;
     &__content {
         margin: 0 80px 0 80px;
+        display: flex;
+        justify-content: center;
         @media (max-width: $md3) {
             margin: 0 15px 0 15px;
         }
@@ -53,6 +55,7 @@ body.lock {
             text-align: center;
         }
     }
+
 
     &__category {
         margin: 0 0 20px 0;
