Отцентрировал кнопку в попапе

--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -57,7 +57,7 @@ body.lock {
         
     }
     &__button1 {
-        
+        text-align: center;
         @media(max-width: $md3) {
             display: none;
         }
