--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -715,6 +715,9 @@ body.lock {
   display: flex;
   justify-content: center;
 }
+.form2__button1 {
+  text-align: center;
+}
 @media (max-width: 767.98px) {
   .form2__button1 {
     display: none;
