--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -70,6 +70,12 @@ body.lock {
             }
         }
     }
+    &__msg {
+        text-align: center; 
+        border: 2px solid rgb(194, 0, 0);
+        border-radius: 3px;
+        
+    }
 }
 
 button.button__send1 {
