--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -74,7 +74,8 @@ body.lock {
         text-align: center; 
         border: 2px solid rgb(194, 0, 0);
         border-radius: 3px;
-        
+        padding-top: 10px;
+        color: #FAFAFA;
     }
 }
 
