--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -737,7 +737,7 @@ body.lock {
   text-align: center;
   border: 2px solid #c20000;
   border-radius: 3px;
-  padding-top: 10px;
+  margin-top: 10px;
   color: #FAFAFA;
 }
 
