--- a/anime-blog/css/sign-up.css
+++ b/anime-blog/css/sign-up.css
@@ -738,7 +738,13 @@ body.lock {
   border: 2px solid #c20000;
   border-radius: 3px;
   margin-top: 10px;
-  color: #FAFAFA;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 200%;
+  letter-spacing: 0.5px;
+  color: #FFFFFF;
 }
 
 button.button__send1 {
