--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -75,7 +75,13 @@ body.lock {
         border: 2px solid rgb(194, 0, 0);
         border-radius: 3px;
         margin-top: 10px;
-        color: #FAFAFA;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 28 / 14 * 100%;
+        letter-spacing: 0.5px;
+        color: #FFFFFF;
     }
 }
 
