--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -82,6 +82,7 @@ body.lock {
         line-height: 28 / 14 * 100%;
         letter-spacing: 0.5px;
         color: #FFFFFF;
+        background: linear-gradient(95.32deg, #313131 0%, #000000 101.64%);
     }
 }
 
