--- a/anime-blog/scss/sign-up.scss
+++ b/anime-blog/scss/sign-up.scss
@@ -81,8 +81,8 @@ body.lock {
         font-size: 14px;
         line-height: 28 / 14 * 100%;
         letter-spacing: 0.5px;
-        color: black;
-        background: linear-gradient(95.32deg, #313131 0%, #ffffff 101.64%);
+        color: #FFFFFF;
+        background: linear-gradient(95.32deg, #313131 0%, #000000 101.64%);
     }
 }
 
