--- a/anime-blog/css/admin.css
+++ b/anime-blog/css/admin.css
@@ -1,5 +1,25 @@
-@import url(style.css);
-h2 {
+body {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+body .title {
   text-align: center;
   padding-top: 100px;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 193.3333333333%;
+  text-align: center;
+  letter-spacing: 0.5px;
+  color: black;
+}
+body .form-group {
+  padding-bottom: 15px;
+}
+body .btn {
+  color: black;
+  background-color: white;
+  border: 2px solid #f64f64;
 }
