--- a/anime-blog/scss/admin.scss
+++ b/anime-blog/scss/admin.scss
@@ -1,6 +1,31 @@
-@import "style.css";
 
-h2 {
+
+
+body {
+    display: flex;
+    flex-direction: column;
     text-align: center;
-    padding-top: 100px;
+    .title {
+        text-align: center;
+        padding-top: 100px;
+        font-family: 'Poppins';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 58 / 30 * 100%;
+        text-align: center;
+        letter-spacing: 0.5px;
+        color: black;
+    }
+
+    .form-group {
+        padding-bottom: 15px;
+    }
+
+    .btn {
+        color: black;
+        background-color: white;
+        border: 2px solid #f64f64;
+    }
 }
+
