--- a/anime-blog/scss/footer.scss
+++ b/anime-blog/scss/footer.scss
@@ -33,6 +33,8 @@
 		}
 
 		&__down {
+            display: flex;
+            justify-content: space-between;
             font-weight: 400;
             font-size: 16px;
             line-height: 38 / 16 * 100%;
@@ -45,6 +47,10 @@
                 margin: 0 15px 0 15px;
                 font-size: 10px;
                 line-height: 20 / 10 * 100%;
+            }
+            a {
+                color: #FAFAFA;
+                text-decoration: none;
             }
 		}
 }
