--- a/anime-blog/scss/footer.scss
+++ b/anime-blog/scss/footer.scss
@@ -49,6 +49,9 @@
                 line-height: 20 / 10 * 100%;
             }
             a {
+                font-weight: 400;
+                font-size: 30px;
+                line-height: 60 / 30 * 100%;
                 color: #FAFAFA;
                 text-decoration: none;
             }
