--- a/anime-blog/css/home-page.css
+++ b/anime-blog/css/home-page.css
@@ -577,6 +577,7 @@ h1, h2, h3, h4, h5, h6 {
 .footer .footer__down {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-weight: 400;
   font-size: 16px;
   line-height: 237.5%;
@@ -596,6 +597,7 @@ h1, h2, h3, h4, h5, h6 {
 .footer .footer__down a {
   font-weight: 400;
   font-size: 16px;
+  letter-spacing: 0.677419px;
   line-height: 190%;
   color: #FAFAFA;
   text-decoration: none;
