--- a/anime-blog/scss/footer.scss
+++ b/anime-blog/scss/footer.scss
@@ -35,6 +35,7 @@
 		&__down {
             display: flex;
             justify-content: space-between;
+            align-items: center;
             font-weight: 400;
             font-size: 16px;
             line-height: 38 / 16 * 100%;
@@ -51,6 +52,7 @@
             a {
                 font-weight: 400;
                 font-size: 16px;
+                letter-spacing: 0.677419px;
                 line-height: 38 / 20 * 100%;
                 color: #FAFAFA;
                 text-decoration: none;
