--- a/anime-blog/scss/admin.scss
+++ b/anime-blog/scss/admin.scss
@@ -26,6 +26,7 @@ body {
         color: black;
         background-color: white;
         border: 2px solid #f64f64;
+        margin-bottom: 10px;
     }
 }
 
