--- a/anime-blog/css/admin.css
+++ b/anime-blog/css/admin.css
@@ -21,6 +21,7 @@ body .form-group {
 body .btn {
   color: black;
   background-color: white;
-  border: 2px solid #f64f64;
+  border: 2px solid black;
+  border-radius: 5px;
   margin-bottom: 10px;
 }
