--- a/anime-blog/scss/admin.scss
+++ b/anime-blog/scss/admin.scss
@@ -22,7 +22,8 @@ body {
     .btn {
         color: black;
         background-color: white;
-        border: 2px solid #f64f64;
+        border: 2px solid black;
+        border-radius: 5px;
         margin-bottom: 10px;
     }
 }
