--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -576,6 +576,9 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 .footer .footer__down {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   font-weight: 400;
   font-size: 16px;
   line-height: 237.5%;
@@ -591,6 +594,14 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 10px;
     line-height: 200%;
   }
+}
+.footer .footer__down a {
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.677419px;
+  line-height: 190%;
+  color: #FAFAFA;
+  text-decoration: none;
 }
 .footer .inf__par {
   margin: 25px 0 0 0;
@@ -772,6 +783,9 @@ body.lock {
   }
 }
 .item3__text4 {
+  overflow: hidden;
+  max-height: 10%;
+  position: relative;
   font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
@@ -785,6 +799,15 @@ body.lock {
     font-size: 13px;
     line-height: 153.8461538462%;
   }
+}
+.item3__text4__btn {
+  position: absolute;
+  bottom: 0;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 50%);
+  width: 100%;
+  height: 60px;
+  opacity: 1;
+  transition: all 0.3s ease 0s;
 }
 
 .trend__headline2 {
