--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -784,7 +784,7 @@ body.lock {
 }
 .item3__text4 {
   overflow: hidden;
-  max-height: 10%;
+  max-height: 50px;
   position: relative;
   font-family: 'Poppins';
   font-style: normal;
@@ -799,15 +799,6 @@ body.lock {
     font-size: 13px;
     line-height: 153.8461538462%;
   }
-}
-.item3__text4__btn {
-  position: absolute;
-  bottom: 0;
-  background: linear-gradient(to bottom, rgba(255, 255, 255, 0), white 50%);
-  width: 100%;
-  height: 60px;
-  opacity: 1;
-  transition: all 0.3s ease 0s;
 }
 
 .trend__headline2 {
