--- a/anime-blog/scss/blog-detail.scss
+++ b/anime-blog/scss/blog-detail.scss
@@ -131,7 +131,7 @@ body.lock {
 
     &__text4 {
         overflow: hidden;
-        max-height: 10%;
+        max-height: 50px;
         position: relative;
         font-family: 'Poppins';
         font-style: normal;
@@ -143,15 +143,6 @@ body.lock {
         @media (max-width: $md3) {
             font-size: 13px;
             line-height: 20 / 13 * 100%;
-        }
-        &__btn {
-            position: absolute;
-            bottom: 0;
-            background: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1) 50%);
-            width: 100%;
-            height: 60px;
-            opacity: 1;
-            transition: all 0.3s ease 0s;
         }
     }
 }
