--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -811,18 +811,21 @@ button#btn2 {
   cursor: pointer;
 }
 button#btn2:hover {
+  color: #ff6464;
   transform: scale(1.2) translateX(8px);
 }
 
 button#btn3 {
   padding: 10px 15px;
   border: #FAFAFA 2px solid;
+  border-radius: 5px;
   color: #FAFAFA;
   background: #020202;
   transition: all 0.3s ease 0s;
   cursor: pointer;
 }
 button#btn3:hover {
+  color: #ff6464;
   transform: scale(1.2) translateX(8px);
 }
 
