--- a/anime-blog/scss/blog-detail.scss
+++ b/anime-blog/scss/blog-detail.scss
@@ -154,17 +154,20 @@ button#btn2 {
     transition: all 0.3s ease 0s;
     cursor: pointer;
     &:hover {
+        color: #ff6464;
         transform: scale(1.2) translateX(8px);
     }
 }
 button#btn3 {
     padding: 10px 15px;
     border: #FAFAFA 2px solid;
+    border-radius: 5px;
     color: #FAFAFA;
     background: #020202;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     &:hover {
+        color: #ff6464;
         transform: scale(1.2) translateX(8px);
     }
 }
