--- a/anime-blog/scss/blog-detail.scss
+++ b/anime-blog/scss/blog-detail.scss
@@ -148,27 +148,28 @@ body.lock {
 }
 button#btn2 {
     padding: 10px 15px;
-    border: #FAFAFA 2px solid;
-    color: #FAFAFA;
-    background: #020202;
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    &:hover {
-        color: #ff6464;
-        transform: scale(1.2) translateX(8px);
-    }
-}
-button#btn3 {
-    padding: 10px 15px;
     border: 2px black solid;
-    border-radius: 5px;
+    border-radius: 2px;
     color: #FAFAFA;
     background: #fafafa;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     &:hover {
         background: #ff6464;
-        transform: scale(1.2) translateX(8px);
+        transform: scale(1.2);
+    }
+}
+button#btn3 {
+    padding: 10px 15px;
+    border: 2px black solid;
+    border-radius: 2px;
+    color: #FAFAFA;
+    background: #fafafa;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    &:hover {
+        background: #ff6464;
+        transform: scale(1.2);
     }
 }
 .trend {
