--- a/anime-blog/scss/blog-detail.scss
+++ b/anime-blog/scss/blog-detail.scss
@@ -150,12 +150,13 @@ button#btn2 {
     padding: 10px 15px;
     border: 2px black solid;
     border-radius: 2px;
-    color: #FAFAFA;
+    color: black;
     background: #fafafa;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     &:hover {
         background: #ff6464;
+        color: #FAFAFA;
         transform: scale(1.2);
     }
 }
@@ -163,12 +164,13 @@ button#btn3 {
     padding: 10px 15px;
     border: 2px black solid;
     border-radius: 2px;
-    color: #FAFAFA;
+    color: black;
     background: #fafafa;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     &:hover {
         background: #ff6464;
+        color: #FAFAFA;
         transform: scale(1.2);
     }
 }
