--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -802,6 +802,10 @@ body.lock {
   display: none;
 }
 
+#more2 {
+  display: none;
+}
+
 button#btn2 {
   padding: 5px 10px;
   border: 2px black solid;
