--- a/anime-blog/scss/blog-detail.scss
+++ b/anime-blog/scss/blog-detail.scss
@@ -146,6 +146,9 @@ body.lock {
 #more {
     display: none;
 }
+#more2 {
+    display: none;
+}
 button#btn2 {
     padding: 5px 10px;
     border: 2px black solid;
