--- a/anime-blog/css/blog-detail.css
+++ b/anime-blog/css/blog-detail.css
@@ -815,10 +815,12 @@ button#btn2 {
   transition: all 0.3s ease 0s;
   cursor: pointer;
 }
-button#btn2:hover {
-  background: #ff6464;
-  color: #FAFAFA;
-  transform: scale(1.2);
+@media (min-width: 767.98px) {
+  button#btn2:hover {
+    background: #ff6464;
+    color: #FAFAFA;
+    transform: scale(1.2);
+  }
 }
 
 button#btn3 {
@@ -830,10 +832,12 @@ button#btn3 {
   transition: all 0.3s ease 0s;
   cursor: pointer;
 }
-button#btn3:hover {
-  background: #ff6464;
-  color: #FAFAFA;
-  transform: scale(1.2);
+@media (min-width: 767.98px) {
+  button#btn3:hover {
+    background: #ff6464;
+    color: #FAFAFA;
+    transform: scale(1.2);
+  }
 }
 
 .trend__headline2 {
