--- a/anime-blog/scss/admin.scss
+++ b/anime-blog/scss/admin.scss
@@ -28,3 +28,31 @@ body {
     }
 }
 
+.hello {
+    margin-bottom: 15px;
+    font-style: normal;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 58 / 30 * 100%;
+        text-align: center;
+        letter-spacing: 0.5px;
+        color: black;
+}
+.logout {
+    font-style: normal;
+        font-weight: 600;
+        font-size: 40px;
+        line-height: 78 / 40 * 100%;
+        text-align: center;
+        letter-spacing: 0.5px;
+        color: black;
+}
+.section {
+    font-style: normal;
+        font-weight: 500;
+        font-size: 30px;
+        line-height: 58 / 30 * 100%;
+        text-align: center;
+        letter-spacing: 0.5px;
+        color: black;
+}
