--- a/anime-blog/css/admin.css
+++ b/anime-blog/css/admin.css
@@ -53,6 +53,10 @@ body .btn {
   color: black;
 }
 
+.admin {
+  display: flex;
+  flex-direction: column;
+}
 .admin input {
   margin-bottom: 15px;
 }
