--- a/anime-blog/css/home-page.css
+++ b/anime-blog/css/home-page.css
@@ -696,6 +696,9 @@ body.lock {
 }
 
 .content__title {
+  transform: translate(0px, 120%);
+  opacity: 0;
+  transition: all 0.8s ease 0s;
   font-family: 'Varela';
   font-style: normal;
   font-weight: 400;
@@ -711,6 +714,10 @@ body.lock {
     text-align: center;
     margin: 0 0 20px 0;
   }
+}
+.content__title___active {
+  opacity: 1;
+  transform: translate(0px, 0px);
 }
 .content__text {
   font-family: 'Poppins';
